--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "infinite-react-carousel": "^1.2.11",
+    "gh-pages": "^3.2.3",
     "lodash.debounce": "^4.0.8",
     "mdbreact": "^5.0.2",
     "react": "^17.0.2",
@@ -53,8 +54,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^3.2.3"
   }
 }
